tests/ok/for-vector-stored.ari
fn main() -> i64 {
  let values: Vec[i64] = [1, 2, 3];
  var total = 0;

  for value in values {
    total = total + value;
  }

  let pairs: Vec[(i64, i64)] = [(1, 2), (3, 4)];
  for (left, right) in pairs {
    total = total + left * right;
  }

  return total;
}
