tests/errors/prelude-unique-reserved.ari
fn main() -> i64 {
  let value: Unique[i64] = 0;
  return value;
}
